# rust-chess-engine

./: Cargo.toml
benches/: ai_move_benchmark.rs  bitmask_benchmark.rs
examples/: ai_agent.rs  network_game.rs  random_agent.rs
src/: agent.rs  bitboard.rs  board.rs  coordinates.rs  game.rs  hashmap_diff.rs  lib.rs  line.rs  main.rs  move_command.rs  parse.rs  piece_type.rs  square.rs
src/agent/: local_agent.rs  minmax_agent.rs  network_agent.rs  random_agent.rs
src/bitboard/: bitboard_square_iterator.rs
src/board/: board.rs  board_config.rs  board_result.rs  error.rs  line.rs  move.rs  piece.rs  piece_type.rs  player_color.rs  square.rs
src/board/board/: board_evaluation.rs  board_move.rs  board_move_checks.rs  board_move_generation.rs  board_move_logic.rs  board_moves.rs  board_queries.rs  board_query.rs  mut_get_bitboards.rs
src/parse/: coordinates.rs  error.rs  move_command.rs  parse_board_config.rs  parse_castling_availability.rs  parse_line.rs  parse_piece_type.rs  parse_square.rs
