[package]
name = "rust-chess-engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.11.8"
log = "0.4.27"
regex = "1.11.1"
thiserror = "2.0.12"
derive_more = { version = "2", features = ["from", "add", "mul", "into", "add_assign", "mul_assign", "not" ] }
getset = "0.1.5"
serde = { version = "1.0", features = ["derive"] }
postcard = { version = "1.0.0", features = ["alloc", "use-std"] }
rayon = "1.10.0"
colored = "3.0.0"

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }
rand = "0.9.1"

[[bench]]
name = "bitmask_benchmark"
harness = false
